middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: app-stripprefix
spec:
  stripPrefix:
    prefixes:
      - "/app"
