traefik-middleware.yaml
# Strip prefix /app
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sample-app-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /app
