backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-backend
  template:
    metadata:
      labels:
        app: sample-backend
    spec:
      containers:
      - name: sample-backend
        image: ghcr.io/mattuu0-test-env/k8s-sample-app/app-hostname:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
          - containerPort: 8080
        volumeMounts:
        - name: nodeinfo
          mountPath: /var/www/hostname
          subPath: hostname
      volumes:
        - name: nodeinfo
          downwardAPI:
            items:
            - path: "hostname"
              fieldRef:
                fieldPath: spec.nodeName
