frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-frontend-service
spec:
  type: LoadBalancer
  selector:
    app: sample-frontend
  ports:
  - port: 80
    targetPort: 3000
